@@ -92,6 +92,7 @@ def suite():
         'test_format.test_fasta',
         'test_format.test_pdb_color',
         'test_format.test_xyzrn',
+        'test_maths.test_fit_function',
         'test_maths.test_geometry',
         'test_maths.test_matrix_logarithm',
         'test_maths.test_period',
