@@ -1,5 +1,6 @@
 #!/usr/bin/env python
-__all__ = ['test_geometry',
+__all__ = ['test_fit_function',
+           'test_geometry',
            'test_matrix',
            'test_matrix_logarithm',
            'test_optimisers',
@@ -10,7 +11,7 @@ __all__ = ['test_geometry',
 __author__ = ""
 __copyright__ = "Copyright 2007-2011, The Cogent Project"
 __credits__ = ["Rob Knight", "Peter Maxwell", "Catherine Lozupone",
-               "Gavin Huttley", "Sandra Smit", "Marcin Cieslik"]
+               "Gavin Huttley", "Sandra Smit", "Marcin Cieslik", "Antonio Gonzalez Pena"]
 __license__ = "GPL"
 __version__ = "1.6.0.dev"
 __maintainer__ = "Rob Knight"
